--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>مستشفى ريسبكت — التأمينات (عرض)</title>
+  <title>مستشفى ريسبكت — التأمينات </title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     :root{
@@ -250,3 +250,4 @@
   </script>
 </body>
 </html>
+
