--- a/admin.html
+++ b/admin.html
@@ -10,15 +10,13 @@
     :root{--bg:#0b0f14;--card:#0f151d;--muted:#92a0b3;--text:#e8eef6;--brand:#7a6bff;--accent:#ff6b6b;--ok:#63e6a5;--border:1px solid rgba(255,255,255,.08)}
     body{margin:0;background:#0a0f14;color:var(--text);font-family:"Cairo",sans-serif}
     .container{width:min(1180px,93%);margin:auto}
-
     /* Intro */
-    #intro{position:fixed; inset:0; z-index:9999; display:flex; flex-direction:column; align-items:center; justify-content:center; background:#0a0f14; animation: fadeOut 0.8s ease forwards; animation-delay: 2.2s;}
+    #intro{position:fixed; inset:0; z-index:9999; display:flex; flex-direction:column; align-items:center; justify-content:center; background:#0a0f14; animation: fadeOut .8s ease forwards; animation-delay: 2.2s;}
     #intro .intro-content{ text-align:center; color:var(--text); animation: scaleIn .5s ease; }
     .intro-logo{ width:110px; height:110px; margin-bottom:14px; animation:pulse 1.8s infinite }
     @keyframes fadeOut{ to{ opacity:0; visibility:hidden } }
     @keyframes scaleIn{ from{ transform:scale(.9); opacity:.4 } to{ transform:none; opacity:1 } }
     @keyframes pulse{ 0%,100%{ transform:scale(1) } 50%{ transform:scale(1.06) } }
-
     /* NAV */
     nav{position:sticky;top:0;z-index:30;background:#11171f;padding:12px 0;border-bottom:var(--border)}
     .nav-inner{display:flex;align-items:center;justify-content:space-between;gap:12px}
@@ -32,7 +30,6 @@
     .btn.warn{background:#30191c}
     .total-badge{display:inline-flex;align-items:center;gap:8px;padding:6px 10px;border-radius:999px;border:var(--border);background:#121a25;color:var(--text);font-size:12px}
     .total-badge .dot{width:8px;height:8px;border-radius:50%;background:var(--ok)}
-
     /* FILTERS */
     .filters{display:flex;gap:8px;flex-wrap:wrap;margin:14px 0}
     .chip{padding:8px 12px;border-radius:999px;border:var(--border);background:#121a25;color:var(--muted);cursor:pointer}
@@ -42,7 +39,6 @@
     .chip[data-cat="بلاتيني"]{ background:rgba(229,228,226,.12); color:#9eaaff; border:1px solid #9eaaff; }
     .chip[data-cat="expired"]{ background:rgba(255,107,107,.12); color:#ff6b6b; border:1px solid #ff6b6b; }
     .chip[data-cat="soon"]{ background:rgba(255,165,0,.12); color:#ffa500; border:1px solid #ffa500; }
-
     /* GRID & CARD */
     .grid{display:grid;gap:12px;grid-template-columns:repeat(auto-fill,minmax(260px,1fr))}
     .card{background:var(--card);border:var(--border);border-radius:14px;overflow:hidden;display:flex;flex-direction:column;position:relative}
@@ -52,23 +48,16 @@
     .title{font-weight:800;font-size:15px}
     .line{color:var(--muted);font-size:12px;display:flex;justify-content:space-between}
     .status{margin-top:2px;font-size:12px}
-
-    /* pill موضع */
     .badge{position:absolute;top:10px;left:10px;padding:0;border:none;background:transparent}
-
-    /* شارة الفئة داخل البطاقة */
     .category{position:absolute;top:10px;right:10px;padding:6px 10px;border-radius:999px;font-size:12px;border:var(--border);background:rgba(255,255,255,.06)}
     .cat-silver{ color:#c0c0c0; border-color:#c0c0c0; background:rgba(192,192,192,.12) }
     .cat-gold{   color:#ffd700; border-color:#ffd700; background:rgba(255,215,0,.12) }
     .cat-plat{   color:#9eaaff; border-color:#9eaaff; background:rgba(229,228,226,.12) }
-
     .actions{display:flex;gap:8px;padding:8px 12px;border-top:var(--border);background:#0f151d}
     .iconbtn{width:32px;height:32px;display:grid;place-items:center;border-radius:8px;border:var(--border);background:#141c28;cursor:pointer}
     .iconbtn.danger{background:#311c1f}
     .hidden{display:none!important}
-
     footer{text-align:center;padding:20px 0;color:var(--muted)}
-
     /* DIALOG */
     dialog{border:none;border-radius:16px;background:#0f141d;color:var(--text);width:min(480px,94%)}
     dialog::backdrop{background:rgba(0,0,0,.55)}
@@ -83,14 +72,8 @@
     .preview-controls{flex:1;min-width:0;display:grid;gap:8px}
     .preview-controls input[type="file"]{width:100%;max-width:100%;box-sizing:border-box;direction:ltr}
     .preview-controls .hint{font-size:12px;color:var(--muted);line-height:1.5}
-
     /* PILL */
-    .pill{
-      display:inline-flex; align-items:center; gap:6px;
-      padding:2px 10px; border-radius:999px;
-      font-size:12px; line-height:1;
-      background:transparent; color:currentColor; border:1px solid currentColor;
-    }
+    .pill{display:inline-flex; align-items:center; gap:6px; padding:2px 10px; border-radius:999px; font-size:12px; line-height:1; background:transparent; color:currentColor; border:1px solid currentColor;}
     .pill .dot{ width:6px; height:6px; border-radius:50%; background:currentColor; }
     .pill.ok{      color: var(--ok);     }
     .pill.soon{    color: #ffa500;       }
@@ -117,6 +100,7 @@
         <button class="btn primary" id="addBtn">إضافة</button>
         <button class="btn" id="editModeBtn">تعديل</button>
         <button class="btn warn" id="deleteModeBtn">حذف</button>
+        <a href="logs-insurance.html" class="btn">Logs</a>
       </div>
     </div>
   </nav>
@@ -152,14 +136,8 @@
       </div>
 
       <div class="row2">
-        <div>
-          <label>الاسم</label>
-          <input type="text" id="name" required />
-        </div>
-        <div>
-          <label>رقم الهوية</label>
-          <input type="text" id="nid" required />
-        </div>
+        <div><label>الاسم</label><input type="text" id="name" required /></div>
+        <div><label>رقم الهوية</label><input type="text" id="nid" required /></div>
       </div>
       <div class="row2">
         <div>
@@ -170,11 +148,9 @@
             <option value="بلاتيني">بلاتيني</option>
           </select>
         </div>
-        <div>
-          <label>تاريخ الانتهاء</label>
-          <input type="date" id="expiry" required />
-        </div>
+        <div><label>تاريخ الانتهاء</label><input type="date" id="expiry" required /></div>
       </div>
+
       <div class="dialog-actions">
         <button type="button" class="btn" id="cancelBtn">إلغاء</button>
         <button type="submit" class="btn primary">حفظ</button>
@@ -182,16 +158,16 @@
     </form>
   </dialog>
 
-  <!-- Supabase (إدارة + رفع الصور للبكت) -->
   <script type="module">
+    import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
+
+    /* ===== Supabase ===== */
     const SUPABASE_URL = "https://piexwsbnbyfqkylqykpi.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBpZXh3c2JuYnlmcWt5bHF5a3BpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg5MDk4MDAsImV4cCI6MjA3NDQ4NTgwMH0.BDYZ1ZAuhLOg7WTUiAWsedNuwRVKfiK-LpUbRsnic3Q";
-    const ADMIN_EMAIL = "belmonster691@gmail.com";
     const BUCKET = "ins-photos";
-
-    import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
     const sb = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
+    /* ===== عناصر ===== */
     const cards=document.getElementById('cards');
     const searchInput=document.getElementById('searchInput');
     const chips=[...document.querySelectorAll('.chip')];
@@ -213,39 +189,30 @@
     let state={q:'',cat:'all',edit:false,del:false};
     let ALL=[]; window.pastedImage=null;
 
+    /* ===== تسجيل دخول مثل المستشفى (بدون admin_users) ===== */
+    async function signInWithPasswordOnly(){
+      const { data:{ user } } = await sb.auth.getUser();
+      if (user) return;
+
+      const email = (prompt('الإيميل الإداري:')||'').trim();
+      const pwd   = (prompt('كلمة المرور:')||'').trim();
+      if (!email || !pwd) { location.replace('index.html'); return; }
+
+      const { error } = await sb.auth.signInWithPassword({ email, password: pwd });
+      if (error) {
+        alert('فشل تسجيل الدخول: ' + (error.message || 'تحقق من الإيميل/كلمة المرور'));
+        location.replace('index.html');
+      }
+    }
+
+    /* ===== تواريخ وحالات ===== */
     const todayStr=()=>new Date().toISOString().slice(0,10);
     const isExpired=d=> d && d < todayStr();
     const daysLeft=d=> !d ? '' : Math.floor((new Date(d)-new Date(todayStr()))/86400000);
     function isSoon(d){ const left=daysLeft(d); return !isExpired(d) && Number.isFinite(left) && left<=5; }
     function catClass(cat){ if(cat==='فضي')return'cat-silver'; if(cat==='ذهبي')return'cat-gold'; if(cat==='بلاتيني')return'cat-plat'; return''; }
 
-    /* ===== تسجيل دخول الأدمن فقط ===== */
-    async function signInWithPasswordOnly(){
-      const { data:{ user } } = await sb.auth.getUser();
-      if(user) return;
-      const pwd = prompt('أدخل كلمة مرور الإدارة:');
-      if(!pwd){ location.replace('/'); return; }
-      const { error } = await sb.auth.signInWithPassword({ email: ADMIN_EMAIL, password: pwd });
-      if(error){ alert('كلمة المرور غير صحيحة'); location.replace('/'); }
-    }
-
-    /* ===== utils للصور ===== */
-    function dataUrlToBlob(d){
-      const [h,b]=String(d).split(',');
-      const mime=(h?.split(';')[0]||'').replace('data:','')||'image/png';
-      const bin=atob(b||'');
-      const u8=new Uint8Array(bin.length);
-      for(let i=0;i<bin.length;i++) u8[i]=bin.charCodeAt(i);
-      return new Blob([u8],{type:mime});
-    }
-    function extFromType(t){ return t==='image/jpeg'?'jpg':t==='image/png'?'png':t==='image/webp'?'webp':'bin'; }
-    function uniquePhotoPath(id, type){
-      const ext = extFromType(type||'image/png');
-      const nonce = Date.now()+'-'+Math.random().toString(36).slice(2,7);
-      return `ins/${id}/${nonce}.${ext}`;
-    }
-
-    /* ===== بطاقات ===== */
+    /* ===== بطاقة ===== */
     function cardHTML(x){
       const expired=isExpired(x.expiry);
       const left=daysLeft(x.expiry);
@@ -284,7 +251,7 @@
     /* ===== CRUD ===== */
     async function load(){
       const { data, error } = await sb.from('insurances').select('*').order('expiry',{ascending:true});
-      ALL = error ? [] : data;
+      ALL = error ? [] : data || [];
       totalCountEl.textContent = ALL.length || 0;
       render();
     }
@@ -308,8 +275,7 @@
       form.reset(); photoPreview.src=''; window.pastedImage=null; editId.value='';
       if(id){
         const x=ALL.find(i=>i.id===id); if(!x) return;
-        editId.value=x.id;
-        nameInput.value=x.name||''; nidInput.value=x.nid||'';
+        editId.value=x.id; nameInput.value=x.name||''; nidInput.value=x.nid||'';
         categoryInput.value=x.category||'فضي'; expiryInput.value=x.expiry||'';
         photoPreview.src=x.photo||'';
       }
@@ -317,18 +283,32 @@
     }
     document.getElementById('cancelBtn').onclick=()=>{ formDialog.close(); window.pastedImage=null; };
 
+    function dataUrlToBlob(d){
+      const [h,b]=String(d).split(',');
+      const mime=(h?.split(';')[0]||'').replace('data:','')||'image/png';
+      const bin=atob(b||'');
+      const u8=new Uint8Array(bin.length);
+      for(let i=0;i<bin.length;i++) u8[i]=bin.charCodeAt(i);
+      return new Blob([u8],{type:mime});
+    }
+    function extFromType(t){ return t==='image/jpeg'?'jpg':t==='image/png'?'png':t==='image/webp'?'webp':'bin'; }
+    function uniquePhotoPath(id, type){
+      const ext = extFromType(type||'image/png');
+      const nonce = Date.now()+'-'+Math.random().toString(36).slice(2,7);
+      return `ins/${id}/${nonce}.${ext}`;
+    }
+
     form.onsubmit=async e=>{
       e.preventDefault();
-      const isEdit = !!editId.value;
-      const id = isEdit ? editId.value : crypto.randomUUID();
-      const existing = isEdit ? ALL.find(i=>i.id===id) : null;
+      const id = editId.value || crypto.randomUUID();
+      const existing = ALL.find(i=>i.id===id) || null;
 
       // جهّز الصورة
       let fileOrBlob=null;
       if(window.pastedImage) fileOrBlob = dataUrlToBlob(window.pastedImage);
       else if(photoInput.files[0]) fileOrBlob = photoInput.files[0];
 
-      // لو فيه صورة جديدة: ارفع باسم فريد لتفادي الكاش — وإلا خَلّ القديم
+      // ارفع باسم فريد لتفادي الكاش
       let photoUrl = existing?.photo || null;
       if(fileOrBlob){
         const path = uniquePhotoPath(id, fileOrBlob.type);
@@ -342,13 +322,12 @@
         photoUrl = data.publicUrl;
       }
 
-      const obj={
-        id,
-        name: nameInput.value.trim(),
-        nid: nidInput.value.trim(),
-        category: categoryInput.value,
-        expiry: expiryInput.value,
-        photo: photoUrl
+      const obj={ id,
+        name:nameInput.value.trim(),
+        nid:nidInput.value.trim(),
+        category:categoryInput.value,
+        expiry:expiryInput.value,
+        photo:photoUrl
       };
       const { error } = await sb.from('insurances').upsert(obj);
       if(error){ alert('فشل الحفظ: '+error.message); return; }
@@ -363,7 +342,7 @@
       await load();
     }
 
-    /* ===== لاصق/سحب/اختيار صورة ===== */
+    /* لصق/سحب صورة */
     document.addEventListener("paste", (event) => {
       if (!formDialog.open) return;
       const items = event.clipboardData?.items || [];
@@ -387,13 +366,9 @@
       if(file) handleFile(file);
     });
     photoInput.onchange=async()=>{ if(photoInput.files[0]) handleFile(photoInput.files[0]); }
-    function handleFile(file){
-      const fr=new FileReader();
-      fr.onload=()=>{ photoPreview.src=fr.result; window.pastedImage=fr.result; };
-      fr.readAsDataURL(file);
-    }
+    function handleFile(file){ const fr=new FileReader(); fr.onload=()=>{ photoPreview.src=fr.result; window.pastedImage=fr.result; }; fr.readAsDataURL(file); }
 
-    /* ===== UI events ===== */
+    /* UI */
     addBtn.onclick=()=>openForm();
     editBtn.onclick=()=>{state.edit=!state.edit;render()}
     delBtn.onclick=()=>{state.del=!state.del;render()}
@@ -401,7 +376,8 @@
     chips.forEach(c=>c.onclick=()=>{chips.forEach(x=>x.setAttribute('aria-pressed','false'));c.setAttribute('aria-pressed','true');state.cat=c.dataset.cat;render()})
     document.getElementById('year').textContent=new Date().getFullYear();
 
-    await signInWithPasswordOnly();
+    /* بدء */
+    await signInWithPasswordOnly();   // نفس أسلوب صفحة المستشفى
     await load();
     setTimeout(()=>{ const el=document.getElementById('intro'); if(el) el.style.display='none'; }, 2400);
   </script>
