--- a/logs-insurance.html
+++ b/logs-insurance.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>لوغ التأمينات</title>
+<title>لوق التأمينات</title>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;800&display=swap" rel="stylesheet">
 <style>
 :root{
@@ -81,7 +81,7 @@ nav{position:sticky;top:0;z-index:40;background:linear-gradient(180deg,rgba(15,2
 
 <nav>
   <div class="nav">
-    <div class="brand"><span class="logo"></span><span>لوغ التأمينات</span></div>
+    <div class="brand"><span class="logo"></span><span>لوق التأمينات</span></div>
 
     <div class="toolbar">
       <button id="refresh" class="refresh">تحديث</button>
@@ -231,3 +231,4 @@ await load();
 </script>
 </body>
 </html>
+
