Fix HTML encoding issues in logs-insurance.html

--- a/logs-insurance.html
+++ b/logs-insurance.html
@@ -189,7 +189,7 @@ function card(row){
         <span class="badge">المستهدف</span>
         <b>${esc(row.target_name||'—')}</b>
       </div>
-      ${count?`<div class="diffs">${diffs.map(diffRow).join('')}</div>`:`<div class="msg">تمت ازالته.</div>`}
+      ${count?`<div class="diffs">${diffs.map(diffRow).join('')}</div>`:`<div class="msg"></div>`}
     </article>
   `;
 }
@@ -231,5 +231,6 @@ await load();
 </script>
 </body>
 </html>
+
 
 
